<resources>
    <string name="app_name">Green Bus</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="routes">routes</string>
    <string name="oneTimeTicket">oneTimeTicket</string>
    <string name="login_failed">Login failed</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="registration">Registration</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="incorrect_proposal">Source and destination are incorrect</string>
    <string name="pick_up_point">Pick up point:</string>
    <string name="release_point">Release point:</string>
    <string name="source">Start:</string>
    <string name="destination">Destination:</string>
    <string name="confirm_proposal">Do you want confirm the proposal?</string>
    <string name="confirm_exit">Do you want exit?</string>
    <string name="not_registered">Not registered?</string>
    <string name="request_accepted">Request accepted! Searching for the best vehicle…</string>
    <string name="vehicle_found">Vehicle found for your trip! Wait for the vehicle %1$s at Station %2$d.</string>
    <string name="vehicle_found_title">Vehicle found for your trip!</string>
    <string name="vehicle_found_description">Wait for the vehicle %1$s at Station %2$d.</string>
    <string name="request_rejected">Ops… Your trip was rejected. Retry please…</string>
    <string name="server_problem">Problem with server!</string>
    <string name="authType">Bearer </string>
    <string name="jwt">jwt</string>
    <string name="license_place">License Plate</string>
    <string name="go">Let\'s Go</string>
    <string name="input_error">Input error</string>
    <string name="station">Station</string>
    <string name="current_location">Current location:</string>
    <string name="location_button">Finding your location…</string>
    <string name="new_route">A new route is viewed!</string>
    <string name="cancel">Cancel</string>
    <string name="source_id">source_id</string>
    <string name="destination_id">destination_id</string>
    <string name="complex_trip">This trip requires one or more changes. Tap on suggestion to execute a request!</string>
</resources>